objects/Employee2__c.object
<CustomObject>
    <fields>
        <fullName>AGE__c</fullName>
        <label>AGE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experienced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experienced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>blank_records_cannot_go</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
   ISNULL( AGE__c ), 
   ISBLANK( FirstName__c ),
   ISBLANK( LastName__c )

)</errorConditionFormula>
        <errorMessage>Don&apos;t leave the record blank</errorMessage>
    </validationRules>
</CustomObject>